# pipelines-rs

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  README.md
demos/: demo-all.sh  demo-change-rename.sh  demo-change-strip-prefix.sh  demo-count-filtered.sh  demo-count-records.sh  demo-duplicate-double.sh  demo-duplicate-triple.sh  demo-engineers-only.sh  demo-filter-sales.sh  demo-literal-footer.sh  demo-literal-header-footer.sh  demo-locate-errors.sh  demo-locate-field.sh  demo-lower-case.sh  demo-multi-filter-count.sh  demo-multi-locate-select.sh  demo-multi-transform.sh  demo-nlocate-exclude.sh  demo-non-marketing.sh  demo-reverse-text.sh  demo-sales-report.sh  demo-skip-take-window.sh  demo-top-five.sh  demo-upper-case.sh
docs/: ai_agent_instructions.md  architecture.md  demos.md  design.md  index.html  plan.md  status.md  user-manual.md  wasm-ui-a02b6a9e9fe08590.js  wasm-ui-a02b6a9e9fe08590_bg.wasm  wasm_ui.js  wasm_ui_bg.wasm
documentation/: plan.md  prd.md  process.md  research.txt  status.md  tools.md
naive-pipe/: Cargo.toml
naive-pipe/wasm-ui/: Cargo.toml  build.rs  index.html
naive-pipe/wasm-ui/src/: app.rs  components.rs  debugger.rs  dsl.rs
pages/: index.html  wasm-ui-4aee87859a723da8.js  wasm-ui-4aee87859a723da8_bg.wasm  wasm-ui-4baaa2c2c93ef1eb_bg.wasm  wasm-ui-52fadea6e4782940_bg.wasm  wasm-ui-7b9cae37a31064ea_bg.wasm
pages-src/: index.html
scripts/: build.sh  demo-lib.sh  serve.sh
specs/: change-rename.pipe  change-strip-prefix.pipe  count-filtered.pipe  count-records.pipe  duplicate-double.pipe  duplicate-triple.pipe  filter-sales.pipe  (+16 more)
(+62 files in other folders)
